8316424: [Lilliput/JDK21] ZGC/CDS-related test fixes
Reviewed-by: shade